--- a/app/src/main/res/layout/hours_view.xml
+++ b/app/src/main/res/layout/hours_view.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="80dp">
+    android:layout_height="100dp">
 
     <LinearLayout
+        android:id="@+id/wholeView"
         android:layout_width="match_parent"
         android:layout_height="90dp"
         android:orientation="vertical">
@@ -13,27 +14,48 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="90dp"
+            android:background="@color/blue_purple"
             android:orientation="horizontal">
 
             <androidx.cardview.widget.CardView
-                android:layout_width="100dp"
-                android:layout_marginLeft="5dp"
-                android:layout_height="80dp">
+                android:layout_width="wrap_content"
+                android:layout_height="69dp"
+                android:layout_gravity="center"
+                android:layout_marginLeft="15dp">
 
-                <TextView
-                    android:id="@+id/hourtxt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="13h00"
-                    android:textColor="@color/dark_purple"
-                    android:textSize="20dp" />
+                <LinearLayout
+                    android:layout_width="125dp"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/startTimetxt"
+                        android:layout_marginTop="10dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginBottom="10dp"
+                        android:text="Start Time: 13h13"
+                        android:textStyle="bold"
+                        android:textSize="13dp" />
+
+                    <TextView
+                        android:id="@+id/endTimetxt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:textStyle="bold"
+                        android:text="End Time: 13h56"
+                        android:textSize="13dp" />
+                </LinearLayout>
+
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:layout_width="300dp"
+                android:layout_marginTop="10dp"
+                android:layout_width="wrap_content"
                 android:layout_height="80dp"
-                android:layout_marginLeft="5dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginRight="5dp"
                 android:backgroundTint="@color/blue_purple" >
 
@@ -44,67 +66,52 @@
 
                     <androidx.cardview.widget.CardView
                         android:id="@+id/cvtimeEntry"
-                        android:layout_width="280dp"
+                        android:layout_width="226dp"
                         android:layout_height="70dp"
                         android:layout_gravity="center">
 
                         <LinearLayout
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:orientation="horizontal">
 
-                            <ImageView
-                                android:id="@+id/imageView"
-                                android:layout_width="46dp"
-                                android:layout_height="46dp"
-                                android:layout_gravity="center"
-                                android:layout_marginLeft="20dp"
-                                android:layout_weight="1"
-                                app:srcCompat="@drawable/baseline_circle_24" />
-
                             <LinearLayout
-                                android:layout_width="204dp"
+                                android:layout_width="119dp"
                                 android:layout_height="match_parent"
-                                android:layout_weight="1"
                                 android:orientation="vertical">
 
                                 <TextView
-                                    android:id="@+id/textView8"
-                                    android:layout_width="131dp"
+                                    android:id="@+id/projectNametxt"
+                                    android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center"
                                     android:layout_marginTop="10dp"
                                     android:text="Project X"
                                     android:textColor="#22162B"
-                                    android:textSize="15dp" />
+                                    android:textSize="20dp"
+                                    android:textStyle="bold" />
 
                                 <TextView
-                                    android:id="@+id/textView21"
-                                    android:layout_width="135dp"
+                                    android:id="@+id/totalTimetxt"
+                                    android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center"
-                                    android:text="Start Time: 13h13"
-                                    android:textSize="13dp" />
-
-                                <TextView
-                                    android:id="@+id/textView24"
-                                    android:layout_width="135dp"
-                                    android:layout_height="wrap_content"
-                                    android:layout_gravity="center"
-                                    android:text="End Time: 13h56"
-                                    android:textSize="13dp" />
+                                    android:layout_marginTop="5dp"
+                                    android:textStyle="italic"
+                                    android:text="1 hour 15 min" />
 
                             </LinearLayout>
 
-                            <Button
-                                android:id="@+id/viewbtn"
+                            <TextView
+                                android:id="@+id/colourtxt"
                                 android:layout_width="40dp"
                                 android:layout_height="40dp"
                                 android:layout_gravity="center"
-                                android:layout_marginRight="20dp"
-                                android:backgroundTint="@color/Light_grey_purple"
-                                android:text="+"
-                                android:textSize="13dp" />
+                                android:layout_marginLeft="40dp"
+                                android:background="@drawable/circle_background"
+                                android:textAlignment="center"
+                                android:textColor="@color/light_red"
+                                android:textSize="20dp" />
 
                         </LinearLayout>
 
