--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,7 @@
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
+    android:background="@color/dark_purple"
     tools:context=".Home">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,131 +20,134 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="55dp"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/logo" />
-
-                <TextView
-                    android:id="@+id/greetingtxt"
-                    android:layout_width="300dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="Welcome Back, Krystelle"
-                    android:textAlignment="center"
-                    android:textColor="@color/white"
-                    android:textSize="25dp" />
-
-            </LinearLayout>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="370dp"
-                android:layout_height="46dp"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:backgroundTint="@color/orange">
+                android:layout_height="190dp"
+                android:background="@color/grey_purple"
+                android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:orientation="vertical">
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:orientation="horizontal">
 
+                    <TextView
+                        android:id="@+id/greetingtxt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:text="Welcome Back, Krystelle"
+                        android:textAlignment="center"
+                        android:textColor="@color/white"
+                        android:textSize="25dp" />
+
+                </LinearLayout>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="370dp"
+                    android:layout_height="46dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="20dp"
+                    android:backgroundTint="@color/new_purple">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:orientation="vertical">
+
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/myGoal"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginLeft="10dp"
+                                android:text="My Daily Goal:"
+                                android:textAlignment="center"
+                                android:textColor="@color/grey_purple"
+                                android:textSize="16dp"
+                                android:textStyle="bold" />
+
+                            <TextView
+                                android:id="@+id/mintxt"
+                                android:layout_width="115dp"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginLeft="10dp"
+                                android:text="Min: 5 hrs"
+                                android:textStyle="bold"
+                                android:textAlignment="center"
+                                android:textColor="@color/grey_purple"
+                                android:textSize="18dp" />
+
+                            <TextView
+                                android:id="@+id/maxtxt"
+                                android:layout_width="115dp"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginLeft="10dp"
+                                android:text="Min: 12 hrs"
+                                android:textStyle="bold"
+                                android:textAlignment="center"
+                                android:textColor="@color/grey_purple"
+                                android:textSize="18dp" />
+                        </LinearLayout>
+
+
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="370dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:backgroundTint="@color/new_purple">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="39dp"
+                        android:background="@drawable/gradient"
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/myGoal"
+                            android:id="@+id/totaltxtlbl"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_marginLeft="10dp"
-                            android:text="My Daily Goal:"
-                            android:textStyle="bold"
+                            android:text="Hours done today:"
                             android:textAlignment="center"
                             android:textColor="@color/white"
-                            android:textSize="16dp" />
+                            android:textSize="16dp"
+                            android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/mintxt"
-                            android:layout_width="115dp"
+                            android:id="@+id/totaltxt"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_marginLeft="10dp"
-                            android:background="@color/light_purple"
-                            android:text="Min: 5 hrs"
+                            android:text="2 Hour/s"
                             android:textAlignment="center"
                             android:textColor="@color/white"
-                            android:textSize="18dp" />
-
-                        <TextView
-                            android:id="@+id/maxtxt"
-                            android:layout_width="115dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginLeft="10dp"
-                            android:background="@color/light_purple"
-                            android:text="Min: 12 hrs"
-                            android:textAlignment="center"
-                            android:textColor="@color/white"
-                            android:textSize="18dp" />
+                            android:textSize="17dp"
+                            android:textStyle="bold" />
                     </LinearLayout>
 
+                </androidx.cardview.widget.CardView>
 
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
+            </LinearLayout>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="370dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:backgroundTint="@color/blue">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="39dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/totaltxtlbl"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:layout_gravity="center"
-                        android:text="Hours done today:"
-                        android:textAlignment="center"
-                        android:textStyle="bold"
-                        android:textColor="@color/white"
-                        android:textSize="16dp" />
-
-                    <TextView
-                        android:id="@+id/totaltxt"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="10dp"
-                        android:text="2 Hour/s"
-                        android:textAlignment="center"
-                        android:textColor="@color/grey_purple"
-                        android:textSize="17dp"
-                        android:textStyle="bold" />
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-        <LinearLayout
+            <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -341,7 +344,7 @@
                 android:layout_height="230dp"
                 android:id="@+id/myScrollView"
                 android:layout_marginTop="20dp"
-                android:background="@color/grey_purple">
+                android:background="@color/dark_purple">
 
                 <LinearLayout
                     android:layout_width="match_parent"
