--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -336,19 +336,15 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
-            <HorizontalScrollView
-                android:layout_width="match_parent"
-                android:layout_height="230dp"
-                android:background="#52445C">
-
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/grey_purple"
                     android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/badgeslbltxt"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="left"
                         android:layout_marginLeft="15dp"
@@ -357,212 +353,36 @@
                         android:textColor="@color/white"
                         android:textSize="20dp" />
 
+
                     <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginTop="10dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="175dp"
-                            android:layout_weight="1"
-                            android:layout_marginLeft="10dp"
-                            android:background="@color/Light_grey_purple"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:id="@+id/bdg1"
-                                android:layout_gravity="center"
-                                android:layout_width="120dp"
-                                android:layout_height="120dp"
-                                android:layout_weight="1"
-                                app:srcCompat="@drawable/badge1" />
-
-                            <TextView
-                                android:id="@+id/bdg1txt"
-                                android:layout_width="130dp"
-                                android:layout_height="31dp"
-                                android:layout_gravity="center"
-                                android:layout_weight="1"
-                                android:text="Complete a Task"
-                                android:textAlignment="center"
-                                android:textColor="@color/dark_purple"
-                                android:textSize="12dp" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="175dp"
-                            android:layout_weight="1"
-                            android:layout_marginLeft="10dp"
-                            android:background="@color/Light_grey_purple"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:id="@+id/bdg2"
-                                android:layout_gravity="center"
-                                android:layout_width="120dp"
-                                android:layout_height="120dp"
-                                android:layout_weight="1"
-                                app:srcCompat="@drawable/badge2" />
-
-                            <TextView
-                                android:id="@+id/bdg2txt"
-                                android:layout_width="130dp"
-                                android:layout_height="31dp"
-                                android:layout_gravity="center"
-                                android:layout_weight="1"
-                                android:text="Complete 10 hours of work"
-                                android:textAlignment="center"
-                                android:textColor="@color/dark_purple"
-                                android:textSize="12dp" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="175dp"
-                            android:layout_weight="1"
-                            android:layout_marginLeft="10dp"
-                            android:background="@color/Light_grey_purple"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:id="@+id/bdg3"
-                                android:layout_gravity="center"
-                                android:layout_width="120dp"
-                                android:layout_height="120dp"
-                                android:layout_weight="1"
-                                app:srcCompat="@drawable/badge3" />
-
-                            <TextView
-                                android:id="@+id/bdg3txt"
-                                android:layout_width="130dp"
-                                android:layout_height="31dp"
-                                android:layout_gravity="center"
-                                android:layout_weight="1"
-                                android:text="Add your first time entry"
-                                android:textAlignment="center"
-                                android:textColor="@color/dark_purple"
-                                android:textSize="12dp" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="175dp"
-                            android:layout_weight="1"
-                            android:layout_marginLeft="10dp"
-                            android:background="@color/Light_grey_purple"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:id="@+id/bdg4"
-                                android:layout_gravity="center"
-                                android:layout_width="120dp"
-                                android:layout_height="120dp"
-                                android:layout_weight="4"
-                                app:srcCompat="@drawable/badge4" />
-
-
-                            <TextView
-                                android:id="@+id/bdg4txt"
-                                android:layout_width="130dp"
-                                android:layout_height="31dp"
-                                android:layout_gravity="center"
-                                android:layout_weight="1"
-                                android:text="Complete 5 tasks"
-                                android:textAlignment="center"
-                                android:textColor="@color/dark_purple"
-                                android:textSize="12dp" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="175dp"
-                            android:layout_weight="1"
-                            android:layout_marginLeft="10dp"
-                            android:background="@color/Light_grey_purple"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:id="@+id/bdg5"
-                                android:layout_gravity="center"
-                                android:layout_width="120dp"
-                                android:layout_height="120dp"
-                                android:layout_weight="1"
-                                app:srcCompat="@drawable/badge5" />
-
-                            <TextView
-                                android:id="@+id/bdg5txt"
-                                android:layout_width="130dp"
-                                android:layout_height="31dp"
-                                android:layout_gravity="center"
-                                android:layout_weight="1"
-                                android:text="Add your first project"
-                                android:textAlignment="center"
-                                android:textColor="@color/dark_purple"
-                                android:textSize="12dp" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="175dp"
-                            android:layout_weight="1"
-                            android:layout_marginLeft="10dp"
-                            android:background="@color/Light_grey_purple"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:id="@+id/bdg6"
-                                android:layout_gravity="center"
-                                android:layout_width="120dp"
-                                android:layout_height="120dp"
-                                android:layout_weight="1"
-                                app:srcCompat="@drawable/badge6" />
-
-                            <TextView
-                                android:id="@+id/bdg6txt"
-                                android:layout_width="130dp"
-                                android:layout_height="31dp"
-                                android:layout_gravity="center"
-                                android:layout_weight="1"
-                                android:text="Connect your Facebook account"
-                                android:textAlignment="center"
-                                android:textColor="@color/dark_purple"
-                                android:textSize="12dp" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="175dp"
-                            android:layout_weight="1"
-                            android:layout_marginLeft="10dp"
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/rvBadges"
                             android:layout_marginRight="10dp"
-                            android:background="@color/Light_grey_purple"
-                            android:orientation="vertical">
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" />
 
-                            <ImageView
-                                android:id="@+id/bdg7"
-                                android:layout_gravity="center"
-                                android:layout_width="120dp"
-                                android:layout_height="120dp"
-                                android:layout_weight="1"
-                                app:srcCompat="@drawable/badge7" />
-
-                            <TextView
-                                android:id="@+id/bdg7txt"
-                                android:layout_width="130dp"
-                                android:layout_height="31dp"
-                                android:layout_gravity="center"
-                                android:layout_weight="1"
-                                android:text="Be first in your leader board"
-                                android:textAlignment="center"
-                                android:textColor="@color/dark_purple"
-                                android:textSize="12dp" />
-                        </LinearLayout>
                     </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/discovertxt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginRight="15dp"
+                        android:background="@color/Light_grey_purple"
+                        android:textAlignment="center"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="You have x more Badges to discover"
+                        android:textColor="@color/dark_purple"
+                        android:textStyle="bold"
+                        android:textSize="15dp" />
+
                 </LinearLayout>
-            </HorizontalScrollView>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
