--- a/app/src/main/res/layout/activity_pomodoro.xml
+++ b/app/src/main/res/layout/activity_pomodoro.xml
@@ -8,13 +8,13 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:paddingTop="10dp"
             android:paddingBottom="16dp">
@@ -30,44 +30,26 @@
                 android:textColor="@color/white"
                 android:textSize="40sp" />
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="350dp"
-                android:layout_height="75dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="20dp">
+            <TextView
+                android:id="@+id/textView13"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:textColor="@color/white"
+                android:layout_marginTop="10dp"
+                android:textSize="20dp"
+                android:layout_marginBottom="5dp"
+                android:text="Currently Working On:" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/imageView"
-                        android:layout_width="51dp"
-                        android:layout_height="52dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_weight="1"
-                        app:srcCompat="@drawable/baseline_circle_24" />
-
-                    <TextView
-                        android:id="@+id/textView8"
-                        android:layout_width="131dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="Project 1"
-                        android:textColor="#22162B"
-                        android:textSize="20sp" />
-
-                    <ImageView
-                        android:id="@+id/addsign"
-                        android:layout_width="51dp"
-                        android:layout_height="52dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_weight="1"
-                        app:srcCompat="@drawable/baseline_add_24" />
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
+            <Spinner
+                android:id="@+id/projectspinner"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_gravity="center"
+                android:background="@color/white" />
 
             <FrameLayout
                 android:id="@+id/flTimer"
@@ -105,7 +87,17 @@
                         android:textSize="50sp"
                         android:textStyle="bold" />
 
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/breakGamesbtn"
+                        android:layout_width="167dp"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/button_bg"
+                        android:text="Break Games"
+                        android:textColor="@color/white"
+                        android:textSize="15dp" />
+
                     <TextView
+                        android:id="@+id/midTxt"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -165,12 +157,14 @@
                     android:layout_marginTop="30dp"
                     android:background="@android:color/transparent"
                     android:text="Pomodoro Settings >"
+                    android:layout_marginBottom="70dp"
                     android:textColor="@color/white"
                     android:textSize="18sp" />
 
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
