--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="Light_grey_purple">#A88DBC</color>
     <color name="new_purple">#d2cfd4</color>
     <color name="grayish">#585759</color>
+    <color name="red">#FD0000</color>
 
 
     <color name="custom">
